--- a/jubliant-meme/webapp/FlaskApp/requirements.txt
+++ b/jubliant-meme/webapp/FlaskApp/requirements.txt
@@ -1,7 +1,23 @@
 alembic==0.8.10
 appdirs==1.4.0
+attrs==15.2.0
+BeautifulSoup==3.2.1
+blinker==1.3
+chardet==2.3.0
 click==6.7
+configglue==1.1.2
+configobj==5.0.6
+configparser==3.5.0
+cryptography==1.2.3
+debtags==2.0
+defer==1.0.6
+dirspec==13.10
 dominate==2.3.1
+duplicity==0.7.6
+ecdsa==0.13
+enum34==1.1.2
+feedparser==5.1.3
+flake8==3.3.0
 Flask==0.12
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.0
@@ -9,14 +25,63 @@ Flask-Migrate==2.0.3
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 gunicorn==19.6.0
+httplib2==0.9.1
+idna==2.0
+ipaddress==1.0.16
 itsdangerous==0.24
+jedi==0.10.0
 Jinja2==2.9.5
+lockfile==0.12.2
+lxml==3.5.0
 Mako==1.0.6
 MarkupSafe==0.23
+mccabe==0.6.1
+nemo-emblems==3.2.3
+netifaces==0.10.4
+oauth==1.0.1
+oauthlib==1.0.3
+oneconf==0.3.9
 packaging==16.8
+PAM==0.4.2
+paramiko==1.16.0
+pep8==1.7.0
+pexpect==4.0.1
+Pillow==3.1.2
+piston-mini-client==0.7.5
+protobuf==2.6.1
+ptyprocess==0.5
+pyasn1==0.1.9
+pyasn1-modules==0.0.7
+pycodestyle==2.3.1
+pycrypto==2.6.1
+pycups==1.9.73
+pycurl==7.43.0
+pyflakes==1.5.0
+pygobject==3.20.0
+pyinotify==0.9.6
+PyJWT==1.3.0
+pyOpenSSL==0.15.1
 pyparsing==2.1.10
+pyparted==3.10.7
+pyserial==3.0.1
+pysmbc==1.0.15.5
+python-apt==1.1.0b1
+python-debian==0.1.27
 python-editor==1.0.3
+python-xlib==0.14
+pyxdg==0.25
+rauth==0.7.3
+reportlab==3.3.0
+requests==2.9.1
+service-identity==16.0.0
+setproctitle==1.1.8
 six==1.10.0
 SQLAlchemy==1.1.5
+Twisted==16.0.0
+urllib3==1.13.1
+uTidylib==0.2
+vboxapi==1.0
+virtualenv==15.1.0
 visitor==0.1.3
 Werkzeug==0.11.15
+zope.interface==4.1.3
