--- a/jubliant-meme/puppet/modules/nginx/files/flaskapp.conf
+++ b/jubliant-meme/puppet/modules/nginx/files/flaskapp.conf
@@ -1,6 +1,6 @@
 server{
-    location{
-        proxy_pass  http://127.0.0.1:8000;
+    location / {
+        proxy_pass  http://127.0.0.1:5000;
         proxy_set_header    Host $host;
         proxy_set_header    X-Real-IP   $remote_addr;
     }
